--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,7 +15,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #9b6e3a;
+  background-color: #178e55;
   height: 55px;
   overflow-y: hidden;
   border-bottom: 0.1875rem solid #577b1e;
@@ -86,7 +86,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #9b6e3a;
+    background-color: #178e55;
     overflow-x: hidden;
   }
 
@@ -116,5 +116,11 @@
 
   .navbar_navigation-items ul {
     display: none;
+  }
+}
+
+@media (max-width: 280px) {
+  .navbar_logo {
+    font-size: 1.2rem;
   }
 }
