--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
+html,
 body {
   background-color: var(--backgroundColor);
   transition: 0.5s;
-  margin: auto;
-  /* margin-top: -8px; */
-  /* margin-bottom: -600px; */
+  margin: 0;
   font-family: 'Roboto', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
